# flannelhead.github.io

./: .gitignore  .gitmodules  LICENSE  README.md  about.html  about.md  clean  deploy  flannelheads-lab.cabal  index.html  projects.html  site  site.hs  stack.yaml  start
_site/: about.html
_site/css/: default.css
css/: default.css
posts/: 2015-08-23-example.html  2016-03-05-getting-to-know-hakyll.html  2016-03-05-getting-to-know-hakyll.md  2016-03-05-photons-and-black-holes.html  2016-03-05-photons-and-black-holes.md  2016-03-06-photons-and-black-holes.html  2016-03-06-photons-and-black-holes.md  2016-03-11-blackstar.html  2016-03-11-blackstar.md  2017-02-18-espway.html  2017-02-18-espway.md  2018-03-11-evolving-espway.html  2018-03-11-evolving-espway.md
projects/: blackstar.html  blackstar.md  espway.html  espway.md
templates/: default.html  post.html  project.html
