name:                flannelheads-lab
version:             0.1.0.0
synopsis:            A personal website / blog
description:         Please see README.md
homepage:            http://github.com/flannelhead/flannelhead.github.io
license:             BSD3
license-file:        LICENSE
author:              Sakari Kapanen
maintainer:          sakari.m.kapanen@gmail.com
copyright:           2016 Sakari Kapanen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable flannelheads-lab
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       pandoc
